--- a/VRChat/94/965694.html
+++ b/VRChat/94/965694.html
@@ -105,7 +105,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UrdDj/k5xHFmtzJCqvrSabJ8C2VGGGy6QJZxm1+rYFc="></script>
+    "V1AMeNbY4N67P+woUznbdLgkuikd1N7GVkOtzUS5qK0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベーシックわん子","description":"可愛いケモっ子男の娘！\n君もわん子になってみんなをぺろぺろしよう！\n\n※肩のボーンが特殊なので、Unityで読み込みしたら必ずwanko_basic（シーン）をWクリックしてね！","url":"https://booth.pm/ja/items/965694","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d6a0764b-a914-4967-8f0d-496582bb28c4/i/965694/f70d9bd5-65cc-46c3-ba02-8e87ee05afbf_base_resized.jpg"}
     </script>
@@ -116,7 +116,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UrdDj/k5xHFmtzJCqvrSabJ8C2VGGGy6QJZxm1+rYFc="></script>
+    nonce="V1AMeNbY4N67P+woUznbdLgkuikd1N7GVkOtzUS5qK0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -447,9 +447,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
