--- a/VRChat/98/964498.html
+++ b/VRChat/98/964498.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "BJArDdCo2Pmd7d0TtOKz2tWiRK5fokg+AoSWm2KQvWA="></script>
+    "Z3GWmG+hOHXZQ56LtdGWkCiy4XXGW/r/Iua+15rrtxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け Genericアバター/3Dモデル 【空き缶】","description":"ポリゴン数　4704\n3Dモデルデータ（fbx/mqo)\nテクスチャデータ三種+カスタム用PSDファイル\nUnityPackage\n規約等書かれたReadmeファイル","url":"https://booth.pm/ja/items/964498","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/df1b1664-e034-4e96-b2b5-2efafdc8757c/i/964498/1b28dd51-db19-4e5b-9527-c0861b28e91d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BJArDdCo2Pmd7d0TtOKz2tWiRK5fokg+AoSWm2KQvWA="></script>
+    nonce="Z3GWmG+hOHXZQ56LtdGWkCiy4XXGW/r/Iua+15rrtxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
