--- a/VRChat/51/963251.html
+++ b/VRChat/51/963251.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Vxst9jI9A5ZV8OYzJNwbF1gtnmkgt2lTNPoWLiVfVRk="></script>
+    "CWmaasp5NTrv1K/OOOpnR2iDdfAzxL1L96lQ4CRM3pY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"BB1-09　～VRChatアバター向け素体モデル～","description":"[Base Body \"BB1-09\"]\nポリゴン数6684のアニメライクな女性のボディ素体です。\nVRChatでよく見かけるアニメ系モデルに近しい身体つきをしています。\nUnity Humanoid規格、及びVRChatフルボディ・トラッキングに対応しています。\n\n8/14 …　Saikin Hutottaを同梱　配布・販売時の条件を更新\n8/12 …　販売開始\n\n\n※現在確認されている不具合\n・Saikin Hutottaを操作した状態でボーンが曲がると縮尺がおかしくなる（次回アップデートで修正予定）\n体型はシェイプキーでも変更可能ですので、修正版のアップデートまではそちらをご利用下さい。なお利用規約に変更はありません。","url":"https://booth.pm/ja/items/963251","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/e6170a80-5060-4a22-8c22-c10792111eba/i/963251/75f7eaa6-cf4b-4936-b5df-27181e72b2c3_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Vxst9jI9A5ZV8OYzJNwbF1gtnmkgt2lTNPoWLiVfVRk="></script>
+    nonce="CWmaasp5NTrv1K/OOOpnR2iDdfAzxL1L96lQ4CRM3pY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -545,9 +545,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
