--- a/VRChat/95/957195.html
+++ b/VRChat/95/957195.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VDjGYQygIlU7FqrWX4fvK/bpRzzGntrBv/896nCfBCM="></script>
+    "Nsxw8jGadL9DGjX5p8K17HZpFqhjoxD1J2SCCpED5Fo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat用フリーアバター】おしゃぶりマン","description":"VRChat用フリーアバター　おしゃぶりマンです。\nHPにて無料で公開しているものをこちらでも配布できるようにしました。\n\n以前、Twitterでおしゃぶりの3Dモデルを配布したところ好評だったので、調子に乗ってネタで作ったアバターですw\n\nVRChatで個人で遊んでいただく分にはほぼ制限なしでご利用いただけますが、一応、クリエイティブ・コモンズ 表示 4.0 国際 ライセンスで配布していますので、細かい規約は\n\nhttp://toy-box.link/download/oshaburiman.html\n\n↑こちらをご確認下さい。","url":"https://booth.pm/ja/items/957195","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/957195/804768cf-a046-41e5-856b-44035f3bd7e8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VDjGYQygIlU7FqrWX4fvK/bpRzzGntrBv/896nCfBCM="></script>
+    nonce="Nsxw8jGadL9DGjX5p8K17HZpFqhjoxD1J2SCCpED5Fo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -344,9 +344,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
