--- a/VRChat/27/954227.html
+++ b/VRChat/27/954227.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "F21LHgxpWmOw+EjxnmRM00JyihI9E5uM0ahTjgi7GZQ="></script>
+    "doPvrQEFuyOVvmKZvUDnlUTcAnhAfakM65+AZu4lS2I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRCHAT用】猫（表情・Anim付き）ボーン設定済み","description":"VRChat用アクセサリー\n・内容\n猫のfbxファイル\nテクスチャ６種(黒猫、白猫、トラ猫、トラネコnew、くつしたnew、ハチワレnew)\n猫用Animファイル（ごろごろ、歩行、座り、ジャンプ）\n\n・仕様\n猫：1460ポリゴン\n　ボーン設定しているため動かせます。\n　表情用シェイプキー付き（笑顔、口パク、耳ぴこぴこ、目拡大、目縮小、ジト目）\n\n\n可：改変、商用利用\n　VRCHAT内での利用、アバターペダステルやワールドの素材として使用可です。\n不可：二次配布・本データを含めた販売、作者詐称\n\n2021/06/01 ver1.02 LegacyAnimeファイルを修正。\n2018/08/28 ver1.01 テクスチャ3種類追加、prefab追加しました","url":"https://booth.pm/ja/items/954227","offers":{"priceCurrency":"JPY","@type":"Offer","price":"280"},"image":"https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/954227/3919dbc8-b5db-401b-8fc5-d578ded46120_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F21LHgxpWmOw+EjxnmRM00JyihI9E5uM0ahTjgi7GZQ="></script>
+    nonce="doPvrQEFuyOVvmKZvUDnlUTcAnhAfakM65+AZu4lS2I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -440,9 +440,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
