--- a/VRChat/72/926972.html
+++ b/VRChat/72/926972.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "RScmBv4+RL30ciSu1xiSI9tEojAGpBOswGARUOcn4i0="></script>
+    "QTbBz/NQaA7N2lGdoZEiTCsFiMc1k+2FixgvFdh2zj0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Quest/PC対応3Dモデル】Y’sトースター","description":"〓〓Y'sトースター〓〓\n\nトースターです。\nVRChatでの使用を想定した3Dモデルです。\nVRC_SDK3.0で制作しています。\nぴょこぴょこと動くリップシンクと、愉快な音と共にパンを飛ばすパーティクル付きです。\nPhysBoneを触れる相手からケーブルを引っ張られるかハンドサインでパンを飛ばせます。\n\n―内容物――――――――――――――――――――――――――\n・モデル本体FBX\n・ケーブルFBX\n・VRChat用セッテイング済みPrefab（Quest版/PC版）\n・取扱説明書\n・規約データ\nが入っています。\n――――――――――――――――――――――――――――――　\n\n\n\n\n―セッティング済みデータについて――――――――――――――\nQuest対応版とPC版のセッティング済みのPrefabが２種類入っています。\nQuest版とPC版の共通点\n本体のモデルデータは同じです。308ポリゴンあります。\n\nQuest版とPC版の違い\nPC版　　 パーティクル・本体・ケーブル(490ポリゴン)のフルセッ\n　　　　 トになります。(合計798ポリゴン)\n\nQuest版　パーティクルはありません。リップシンクのみとなります。\n――――――――――――――――――――――――――――――\n\n\n\n―利用規約―――――――――――――――――――――――――\n\n利用規約とガイドラインの両方をご購入前に必ずご確認ください。\n本利用規約はVN3ライセンスを採用させて頂いています。\n規約データは、アバターデータにも同梱されています。\n\nアバター利用規約\nhttps://drive.google.com/file/d/10tfIMYSuNIcevgP5aGiinpa3XIzpulWm/view?usp=sharing\n\nLicense(Eng)\nhttps://drive.google.com/file/d/1h3g83i_EadF0972SkQ0XXzuXUg10uP-n/view?usp=sharing\n\n―――――――――――――――――――――――――――――\n\n\n\n―更新内容―――――――――――――――――――――――――\n\nV2.2---PhysBoneギミック追加/Viewpoint等調整\n\nV2.1---パーティクル不具合修正\n\nV2.0---Avatar3.0対応\n\nV1.1---パーティクルのエラー修正\n\n不具合があれば @Yorin_vrc までお願いします。\n――――――――――――――――――――――――――――――","url":"https://booth.pm/ja/items/926972","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/c6dcf68b-82ac-4294-953d-6f3b88111206/i/926972/400ea5b2-eb3e-424a-9514-838f9050b710_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RScmBv4+RL30ciSu1xiSI9tEojAGpBOswGARUOcn4i0="></script>
+    nonce="QTbBz/NQaA7N2lGdoZEiTCsFiMc1k+2FixgvFdh2zj0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -430,9 +430,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
