--- a/VRChat/38/953338.html
+++ b/VRChat/38/953338.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "y1ycwWRFWXLSpuuLWRpsK9kwH5Qsgsd2AhdKwr53Z5E="></script>
+    "BUxzGimJw641ToA/aXI4FFACVEvfH4Tl6H69jZKIV7I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シンプル男性モデル（無料版）","description":"無料配布のVRchat向けのオリジナル男性モデルとなっております。\n男性モデルが少ないので選択肢の１つにでもご利用ください。\n\n\n","url":"https://booth.pm/ja/items/953338","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a12bdc4d-2b9f-4309-a04e-8e40fb63d9f6/i/953338/6fdff48f-259c-42df-af8c-5e807e53fe91_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y1ycwWRFWXLSpuuLWRpsK9kwH5Qsgsd2AhdKwr53Z5E="></script>
+    nonce="BUxzGimJw641ToA/aXI4FFACVEvfH4Tl6H69jZKIV7I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -418,9 +418,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
