--- a/VRChat/72/953572.html
+++ b/VRChat/72/953572.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "appTJU6LNbquC2lbpPPQPf2AUqDNYK+QFdsb8w9IaNQ="></script>
+    "9DVQCHyytczqLo2CD/Er8wa0hpmkGkJI4sf4lSCej6w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"コンポジットランス","description":"槍、銃、剣としての機能を合体させた武器です\nすごく使いにくいと評判です\nギミック等は入っておりません\nご自由にカスタムしてお使いください","url":"https://booth.pm/ja/items/953572","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ea95dbd8-fd5b-43a0-9a82-ee7157567ac9/i/953572/985b92e6-c27e-4221-8252-02735f9f9e71_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="appTJU6LNbquC2lbpPPQPf2AUqDNYK+QFdsb8w9IaNQ="></script>
+    nonce="9DVQCHyytczqLo2CD/Er8wa0hpmkGkJI4sf4lSCej6w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
